refactor configuration and core

--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -26,7 +26,7 @@
           %td
             Body
           %td
-            = render 'spina/admin/shared/rich_text_field', form: f, field: :body
+            = render 'spina/admin/shared/rich_text_field', f: f, field: :body
         %tr
           %td
             Publish date
