--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -12,11 +12,6 @@
             = f.text_field :title
         %tr
           %td
-            Slug
-          %td
-            = f.text_field :slug, placeholder: "URL of the article"
-        %tr
-          %td
             Teaser
             %small
               Summary of the article that will appear on the listings page
@@ -27,6 +22,25 @@
             Body
           %td
             = render 'spina/admin/shared/rich_text_field', f: f, field: :body
+        %tr
+          %td
+            Photo
+          %td
+            = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: (f.object.photo_id if f.object.photo_id.present?), hidden_field_id: 'photo_id'), remote: true, class: "media_picker" do
+              - if f.object.photo && f.object.photo.file.present?
+                .placeholder.pull-right
+                  %span.button.button-small.button-round
+                    %i.icon.icon-dots
+                    = t 'spina.pages.photo_picker'
+                .image
+                  = image_tag f.object.photo.file.thumb
+              - else
+                .placeholder
+                  %span.button.button-small.button-round
+                    %i.icon.icon-dots
+                    = t 'spina.pages.photo_picker'
+
+              = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
         %tr
           %td
             Publish date
