--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -1,8 +1,8 @@
-= form_for [spina, :admin, @article], html: { autocomplete: "off" } do |f|
+= form_for [:admin, @article], html: { autocomplete: "off" } do |f|
   - content_for :notification_alert do
     = error_explanation!(@article)
 
-  #page_content.tab-content.active
+  #page_content
     .table-container
       %table.table.table-form
         %tr
