--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -1,66 +1,73 @@
-= form_for [:admin, @article], html: { autocomplete: "off" } do |f|
+- content_for(:permanent_notice) do
+  - unless current_account.robots_allowed?
+    .permanent-notice.permanent-notice-info
+      = icon('search')
+      %p
+        =t 'spina.pages.invisible_to_search_engines'
+        %small=t 'spina.pages.invisible_to_search_engines_description'
+
+= form_for [:admin, @article], multipart: true, html: { autocomplete: "off" } do |f|
+  %header#header
+    .breadcrumbs= render_breadcrumbs separator: '<div class="divider"></div>'
+    #header_actions
+      %button.button.button-primary{type: 'submit'}
+        = icon('check')
+        Save article
+      = link_to t('spina.cancel'), spina.admin_articles_path, class: 'button button button-secondary'
+
   - content_for :notification_alert do
     = error_explanation!(@article)
 
-  #page_content
-    .table-container
-      %table.table.table-form
-        %tr
-          %td
-            Title
-          %td
-            = f.text_field :title
-        %tr
-          %td
-            Teaser
-            %small
-              Summary of the article that will appear on the listings page
-          %td
-            = f.text_area :teaser
-        %tr
-          %td
-            Body
-          %td
-            = render 'spina/admin/shared/rich_text_field', f: f, field: :body
-        %tr
-          %td
-            Photo
-          %td
-            = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: (f.object.photo_id if f.object.photo_id.present?), hidden_field_id: 'photo_id'), remote: true, class: "media_picker" do
-              - if f.object.photo && f.object.photo.file.present?
-                .placeholder.pull-right
-                  %span.button.button-small.button-round
-                    %i.icon.icon-dots
-                    = t 'spina.pages.photo_picker'
-                .image
-                  = image_tag f.object.photo.file.thumb
-              - else
-                .placeholder
-                  %span.button.button-small.button-round
-                    %i.icon.icon-dots
-                    = t 'spina.pages.photo_picker'
-
-              = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
-        %tr
-          %td
-            Publish date
-          %td
-            = f.text_field :publish_date, value: (@article.publish_date.strftime("%d-%m-%Y") unless @article.new_record?), class: 'datepicker'
-        %tr
-          %td
-            Author
-          %td
-            = f.text_field :author
-        %tr
-          %td
-            Draft?
-          %td
-            = f.check_box :draft, data: { switch: true }
-
-  %button.button.button-primary{ type: 'submit', data: { icon: 'o' } }
-    Save article
-
-  = link_to "Cancel", spina.admin_articles_path, class: 'button button-link'
+  #page_content.tab-content.active.well
+    .horizontal-form
+      .horizontal-form-group
+        .horizontal-form-label
+          = Spina::Page.human_attribute_name :title
+        .horizontal-form-content
+          = f.text_field :title, placeholder: Spina::Page.human_attribute_name(:title_placeholder)
+      .horizontal-form-group
+        .horizontal-form-label
+          Teaser
+        .horizontal-form-content
+          = f.text_area :teaser
+      .horizontal-form-group
+        .horizontal-form-label
+          Body
+        .horizontal-form-content
+          = render 'spina/admin/shared/rich_text_field', f: f, field: :body
+      .horizontal-form-group
+        .horizontal-form-label
+          Photo
+        .horizontal-form-content
+          = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: (f.object.photo_id if f.object.photo_id.present?), hidden_field_id: 'photo_id'), remote: true, class: "media_picker" do
+            - if f.object.photo && f.object.photo.file.present?
+              .placeholder.pull-right
+                %span.button.button-small.button-round
+                  %i.icon.icon-dots
+                  = t 'spina.pages.photo_picker'
+              .image
+                = image_tag f.object.photo.file.thumb
+            - else
+              .placeholder
+                %span.button.button-small.button-round
+                  %i.icon.icon-dots
+                  = t 'spina.pages.photo_picker'
+            = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
+      .horizontal-form-group
+        .horizontal-form-label
+          Publish date
+        .horizontal-form-content
+          = f.text_field :publish_date, value: (@article.publish_date.strftime("%d-%m-%Y") unless @article.new_record?), class: 'datepicker'
+      .horizontal-form-group
+        .horizontal-form-label
+          Author
+        .horizontal-form-content
+          = f.text_field :author
+      .horizontal-form-group
+        .horizontal-form-label
+          Draft?
+        .horizontal-form-content
+          = f.check_box :draft, data: { switch: true }
 
   - unless @article.new_record?
-    .pull-right= link_to "Delete", spina.admin_article_path(@article), method: :delete, confirm: "Are you sure you want to remove this article?", class: 'button button-link button-danger'
+    .pull-right= link_to t('spina.permanently_delete'), spina.admin_articles_path, method: :delete, data: {confirm: t('spina.pages.delete_confirmation', subject: @article.title) }, class: 'button button-link button-danger'
