adds Artilce statuses on model and index view

--- a/app/views/spina/admin/articles/_article.html.haml
+++ b/app/views/spina/admin/articles/_article.html.haml
@@ -2,6 +2,10 @@
   %div.dd-item-inner
     = link_to spina.edit_admin_article_path(article), class: 'button button-link button-small sortable-link' do
       = article.title
+      %span.article-status
+        = 'live' if article.live?
+        = 'scheduled' if article.scheduled?
+        = 'draft' if article.draft?
     %span.pull-right
       = link_to spina.edit_admin_article_path(article), class: 'button button-small button-link dd-nodrag' do
         = icon('pencil-outline')
