--- a/app/views/spina/admin/articles/_article.html.haml
+++ b/app/views/spina/admin/articles/_article.html.haml
@@ -1,5 +1,11 @@
 %li.dd-item
   %div.dd-item-inner
+    - if article.live?
+      %div.article-status.live
+    - if article.draft?
+      %div.article-status.draft
+    - if article.scheduled?
+      %div.article-status.scheduled
     = link_to spina.edit_admin_article_path(article), class: 'button button-link button-small sortable-link' do
       = article.title
     %span.pull-right
