--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -31,7 +31,7 @@
         .horizontal-form-label
           = Spina::Page.human_attribute_name :title
         .horizontal-form-content
-          = f.text_field :title, placeholder: Spina::Page.human_attribute_name(:title_placeholder)
+          = f.text_field :title
       .horizontal-form-group
         .horizontal-form-label
           Teaser
@@ -46,20 +46,20 @@
         .horizontal-form-label
           Photo
         .horizontal-form-content
-          = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: (f.object.photo_id if f.object.photo_id.present?), hidden_field_id: 'photo_id'), remote: true, class: "media_picker" do
-            - if f.object.photo && f.object.photo.file.present?
+          = link_to admin_media_picker_path(selected_ids: [f.object.image_id], hidden_field_id: 'media_picker_image_id'), remote: true, class: 'media_picker clearfix' do
+            - if f.object&.image&.file&.attached?
               .placeholder.pull-right
                 %span.button.button-small.button-round
                   %i.icon.icon-dots
-                  = t 'spina.pages.photo_picker'
+                  = t('spina.images.choose_image')
               .image
-                = image_tag f.object.photo.file.thumb
+                = image_tag variant(f.object.image.file, resize: "300x300^", crop: "300x300+0+0")
             - else
               .placeholder
                 %span.button.button-small.button-round
                   %i.icon.icon-dots
                   = t 'spina.pages.photo_picker'
-            = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
+            = f.hidden_field :image_id, data: { hidden_field_id: 'media_picker_image_id' }
       .horizontal-form-group
         .horizontal-form-label
           Publish date
