--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -16,62 +16,61 @@
       = link_to '#', data: {close_notification: true} do
         = icon('cross')
 
-= form_for [:admin, @article], multipart: true, html: { autocomplete: "off" } do |f|
-  %header#header
-    .breadcrumbs= render_breadcrumbs separator: '<div class="divider"></div>'
-    #header_actions
-      %button.button.button-primary{type: 'submit'}
-        = icon('check')
-        = t('spina.articles.save', scaffold_name: t('spina.articles.scaffold_name'))
-      = link_to t('spina.cancel'), spina.admin_articles_path, class: 'button button button-secondary'
+%header#header
+  .breadcrumbs= render_breadcrumbs separator: '<div class="divider"></div>'
+  #header_actions
+    %button.button.button-primary{type: 'submit'}
+      = icon('check')
+      = t('spina.articles.save', scaffold_name: t('spina.articles.scaffold_name'))
+    = link_to t('spina.cancel'), spina.admin_articles_path, class: 'button button button-secondary'
 
-  #page_content.tab-content.active.well
-    .horizontal-form
-      .horizontal-form-group
-        .horizontal-form-label
-          = Spina::Page.human_attribute_name :title
-        .horizontal-form-content
-          = f.text_field :title
-      .horizontal-form-group
-        .horizontal-form-label
-          Teaser
-        .horizontal-form-content
-          = f.text_area :teaser
-      .horizontal-form-group
-        .horizontal-form-label
-          Body
-        .horizontal-form-content
-          = render 'spina/admin/shared/rich_text_field', f: f, field: :body
-      .horizontal-form-group
-        .horizontal-form-label
-          Image
-        .horizontal-form-content
-          = link_to admin_media_picker_path(selected_ids: [f.object.image_id], hidden_field_id: 'media_picker_image_id'), remote: true, class: 'media_picker clearfix' do
-            .placeholder
-              %span.button.button-small.button-round
-                %i.icon.icon-dots
-                = (t'spina.images.choose_image')
+#page_content.tab-content.active.well
+  .horizontal-form
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Page.human_attribute_name :title
+      .horizontal-form-content
+        = f.text_field :title
+    .horizontal-form-group
+      .horizontal-form-label
+        Teaser
+      .horizontal-form-content
+        = f.text_area :teaser
+    .horizontal-form-group
+      .horizontal-form-label
+        Body
+      .horizontal-form-content
+        = render 'spina/admin/shared/rich_text_field', f: f, field: :body
+    .horizontal-form-group
+      .horizontal-form-label
+        Image
+      .horizontal-form-content
+        = link_to admin_media_picker_path(selected_ids: [f.object.image_id], hidden_field_id: 'media_picker_image_id'), remote: true, class: 'media_picker clearfix' do
+          .placeholder
+            %span.button.button-small.button-round
+              %i.icon.icon-dots
+              = (t'spina.images.choose_image')
 
-            - if f.object&.image&.file&.attached?
-              .image
-                = image_tag variant(f.object.image.file, resize: "300x300^", crop: "300x300+0+0")
+          - if f.object&.image&.file&.attached?
+            .image
+              = image_tag variant(f.object.image.file, resize: "300x300^", crop: "300x300+0+0")
 
-            = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }
-      .horizontal-form-group
-        .horizontal-form-label
-          Publish date
-        .horizontal-form-content
-          = f.text_field :publish_date, value: (@article.publish_date.strftime("%d-%m-%Y") unless @article.new_record?), class: 'datepicker'
-      .horizontal-form-group
-        .horizontal-form-label
-          Author
-        .horizontal-form-content
-          = f.text_field :author
-      .horizontal-form-group
-        .horizontal-form-label
-          Draft?
-        .horizontal-form-content
-          = f.check_box :draft, data: { switch: true }
+          = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }
+    .horizontal-form-group
+      .horizontal-form-label
+        Publish date
+      .horizontal-form-content
+        = f.text_field :publish_date, value: (@article.publish_date.strftime("%d-%m-%Y") unless @article.new_record?), class: 'datepicker'
+    .horizontal-form-group
+      .horizontal-form-label
+        Author
+      .horizontal-form-content
+        = f.text_field :author
+    .horizontal-form-group
+      .horizontal-form-label
+        Draft?
+      .horizontal-form-content
+        = f.check_box :draft, data: { switch: true }
 
-  - unless @article.new_record?
-    .pull-right= link_to t('spina.permanently_delete'), spina.admin_article_path(@article), method: :delete, data: {confirm: t('spina.pages.delete_confirmation', subject: @article.title) }, class: 'button button-link button-danger'
+- unless @article.new_record?
+  .pull-right= link_to t('spina.permanently_delete'), spina.admin_article_path(@article), method: :delete, data: {confirm: t('spina.articles.delete_confirmation', subject: @article.title) }, class: 'button button-link button-danger'
