--- a/app/views/spina/admin/articles/edit.html.haml
+++ b/app/views/spina/admin/articles/edit.html.haml
@@ -1,1 +1,2 @@
-= render 'form'
+= form_for [:admin, @article], url: spina.admin_article_path(@article.id), html: {id: 'article_form', autocomplete: "off"} do |f|
+  = render 'form', f: f
