--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -73,4 +73,4 @@
         = f.check_box :draft, data: { switch: true }
 
 - unless @article.new_record?
-  .pull-right= link_to t('spina.permanently_delete'), spina.admin_article_path(@article), method: :delete, data: {confirm: t('spina.articles.delete_confirmation', subject: @article.title) }, class: 'button button-link button-danger'
+  .pull-right= link_to t('spina.permanently_delete'), spina.admin_article_path(@article.id), method: :delete, data: {confirm: t('spina.articles.delete_confirmation', subject: @article.title) }, class: 'button button-link button-danger'
