--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -19,8 +19,9 @@
 %header#header
   .breadcrumbs
     = render_breadcrumbs separator: '<div class="divider"></div>'
-    = link_to article_path(@article), target: :blank, class: 'button button-hollow button-small' do
-      %i.icon.icon-export{style: 'margin: 0'}
+    - unless @article.new_record?
+      = link_to article_path(@article), target: :blank, class: 'button button-hollow button-small' do
+        %i.icon.icon-export{style: 'margin: 0'}
 
   #header_actions
     %button.button.button-primary{type: 'submit'}
