--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -68,7 +68,7 @@
 
           - if f.object&.image&.file&.attached?
             .image
-              = image_tag variant(f.object.image.file, resize: "300x300^", crop: "300x300+0+0")
+              = image_tag(f.object.image.file)
 
           = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }
     .horizontal-form-group
