--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -68,7 +68,7 @@
 
           - if f.object&.image&.file&.attached?
             .image
-              = image_tag(f.object.image.file.variant(resize: "300x300"), size: "300")
+              = image_tag(f.object.image.variant(resize: "300x300"), size: "300")
 
           = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }
     .horizontal-form-group
