--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -60,13 +60,14 @@
       .horizontal-form-label
         Image
       .horizontal-form-content
+        = link_to admin_media_picker_path(selected_ids: [f.object.image_id], hidden_field_id: 'media_picker_image_id'), remote: true, class: 'media_picker clearfix' do
         - if f.object&.image&.file&.attached?
           .placeholder.pull-right
             %span.button.button-small.button-round
               %i.icon.icon-dots
               = t('spina.images.choose_image')
           .image
-            = image_tag variant(f.object.image.file, resize: "300x300^", crop: "300x300+0+0")
+            = image_tag (f.object.image.file)
         - else
           .placeholder
             %span.button.button-small.button-round
