--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -65,6 +65,9 @@
             %span.button.button-small.button-round
               %i.icon.icon-dots
               = (t'spina.images.choose_image')
+          - if f.object&.image&.file&.attached?
+            .image
+              = image_tag variant(@article.image, resize: "300x300^", crop: "300x300+0+0")
 
           = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }    
     .horizontal-form-group
