--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -67,7 +67,7 @@
               = (t'spina.images.choose_image')
           - if f.object&.image&.file&.attached?
             .image
-              = image_tag variant(@article.image, resize: "300x300^", crop: "300x300+0+0")
+              = image_tag @article.image.variant(resize: '300x300')
 
           = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }    
     .horizontal-form-group
