--- a/app/views/spina/admin/articles/_form.html.haml
+++ b/app/views/spina/admin/articles/_form.html.haml
@@ -67,7 +67,7 @@
               = (t'spina.images.choose_image')
           - if f.object&.image&.file&.attached?
             .image
-              = image_tag main_app.url_for(@article.image_url)
+              = image_tag main_app.url_for(@article.image_id)
 
           = f.hidden_field :image_id, data: { hidden_field_id: "media_picker_image_id" }    
     .horizontal-form-group
